# cardano-haskell-packages

./: .gitignore  01-index.tar  CODEOWNERS  CONTRIBUTING.md  README.md  cabal.project  flake.nix  mirrors.json  result  root.json  snapshot.json  timestamp.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yml  publish.yml  shellcheck.yml  update-flake-lock.yml
all-package-versions/: index.html
all-packages/: index.html
builder/: default.nix
foliage/: packages.json
hackage-candidates/: README.md  create-placeholders.sh  package_name.cabal  upload-placeholders.sh  upload_packages.sh
hackage-candidates/Win32-network/: Win32-network.cabal
hackage-candidates/acts-generic/: acts-generic.cabal
hackage-candidates/aeson-record/: aeson-record.cabal
hackage-candidates/async-components/: async-components.cabal
hackage-candidates/base-deriving-via/: base-deriving-via.cabal
hackage-candidates/base16-aeson/: base16-aeson.cabal
hackage-candidates/byron-spec-chain/: byron-spec-chain.cabal
hackage-candidates/byron-spec-ledger/: byron-spec-ledger.cabal
hackage-candidates/cardano-api/: cardano-api.cabal
hackage-candidates/cardano-api-gen/: cardano-api-gen.cabal
hackage-candidates/cardano-base/: cardano-base.cabal
hackage-candidates/cardano-binary/: cardano-binary.cabal
hackage-candidates/cardano-binary-test/: cardano-binary-test.cabal
hackage-candidates/cardano-cli/: cardano-cli.cabal
hackage-candidates/cardano-client/: cardano-client.cabal
hackage-candidates/cardano-client-demo/: cardano-client-demo.cabal
hackage-candidates/cardano-crypto-class/: cardano-crypto-class.cabal
hackage-candidates/cardano-crypto-peras/: cardano-crypto-peras.cabal
hackage-candidates/cardano-crypto-praos/: cardano-crypto-praos.cabal
hackage-candidates/cardano-crypto-test/: cardano-crypto-test.cabal
hackage-candidates/cardano-crypto-tests/: cardano-crypto-tests.cabal
hackage-candidates/cardano-crypto-wallet/: cardano-crypto-wallet.cabal
hackage-candidates/cardano-crypto-wrapper/: cardano-crypto-wrapper.cabal
hackage-candidates/cardano-data/: cardano-data.cabal
hackage-candidates/cardano-diffusion/: cardano-diffusion.cabal
hackage-candidates/cardano-git-rev/: cardano-git-rev.cabal
hackage-candidates/cardano-ledger-allegra/: cardano-ledger-allegra.cabal
hackage-candidates/cardano-ledger-alonzo/: cardano-ledger-alonzo.cabal
hackage-candidates/cardano-ledger-alonzo-test/: cardano-ledger-alonzo-test.cabal
hackage-candidates/cardano-ledger-api/: cardano-ledger-api.cabal
hackage-candidates/cardano-ledger-babbage/: cardano-ledger-babbage.cabal
hackage-candidates/cardano-ledger-babbage-test/: cardano-ledger-babbage-test.cabal
hackage-candidates/cardano-ledger-binary/: cardano-ledger-binary.cabal
hackage-candidates/cardano-ledger-byron/: cardano-ledger-byron.cabal
hackage-candidates/cardano-ledger-byron-test/: cardano-ledger-byron-test.cabal
hackage-candidates/cardano-ledger-conway/: cardano-ledger-conway.cabal
hackage-candidates/cardano-ledger-conway-test/: cardano-ledger-conway-test.cabal
hackage-candidates/cardano-ledger-core/: cardano-ledger-core.cabal
hackage-candidates/cardano-ledger-dijkstra/: cardano-ledger-dijkstra.cabal
hackage-candidates/cardano-node-chairman/: cardano-node-chairman.cabal
hackage-candidates/cardano-recon-framework/: cardano-recon-framework.cabal
hackage-candidates/heapwords/: heapwords.cabal
hackage-candidates/lobemo-backend-aggregation/: lobemo-backend-aggregation.cabal
hackage-candidates/marlowe-spec-test/: marlowe-spec-test.cabal
hackage-candidates/merkle-tree-incremental/: merkle-tree-incremental.cabal
hackage-candidates/ouroboros-consensus-byronspec/: ouroboros-consensus-byronspec.cabal
hackage-candidates/ouroboros-consensus-tutorials/: ouroboros-consensus-tutorials.cabal
hackage-candidates/plutus-scripts-bench/: plutus-scripts-bench.cabal
hackage-candidates/quickcheck-monoids/: quickcheck-monoids.cabal
hackage-candidates/scls-cardano/: scls-cardano.cabal
hackage-candidates/small-steps-test/: small-steps-test.cabal
hackage-candidates/typed-protocols-stateful-cborg/: typed-protocols-stateful-cborg.cabal
index/byron-spec-chain/0.1.1.0/: byron-spec-chain.cabal  package.json
index/cardano-data/0.1.1.0/: cardano-data.cabal  package.json
index/cardano-ledger-alonzo-test/0.1.1.0/: cardano-ledger-alonzo-test.cabal  package.json
nix/: builder.nix  chap-meta.nix
package/cardano-lmdb-simple-0.8.1.1/: cardano-lmdb-simple.cabal
package/cardano-rpc-10.1.0.0/: cardano-rpc.cabal  index.html
package/contra-tracer-0.2.1.0/: contra-tracer.cabal
package/digest-0.0.2.1.0.0.0.1/: digest.cabal  index.html
package/digest-0.0.2.1.0.0.0.1/revision/: 1.cabal
package/fs-sim-0.4.0.0/: fs-sim.cabal  index.html
package/haskell-accumulator-1.1.0.0/: haskell-accumulator.cabal  index.html
package/hedgehog-extras-0.10.1.0/: hedgehog-extras.cabal  index.html
package/hedgehog-extras-0.10.1.0/revision/: 1.cabal
package/libsystemd-journal-1.4.6.0/: index.html  libsystemd-journal.cabal
package/libsystemd-journal-1.4.6.0/revision/: 1.cabal
package/mempack-scls-0.1.0.0/: index.html  mempack-scls.cabal
package/plutus-accumulator-0.1.0.0/: plutus-accumulator.cabal
package/scls-format-0.1.0.0/: index.html  scls-format.cabal
package/typed-protocols-1.1.0.1/: index.html  typed-protocols.cabal
scripts/: add-from-github.sh  add-revision.sh  check-archive-extension.sh  check-cabal-plan.sh  check.sh  compare-package-metadata.sh  current-timestamp.sh  depencencies-from-cabal-file.sh  fetch-all-cabal-files.sh  fetch-github-cabal-files.sh  generate-dependency-graph.sh  list-latest-package-revs.sh  list-latest-package-versions.sh  list-packages.sh  local-ci.sh  not-on-hackage.sh  rebase-and-update-timestamps.sh  reproduce-github-actions-run.sh  rewrite-timestamps.sh  test-package-build.sh  test-packages-build.sh  update-branch.sh  update-chap-deps.sh  update-timestamps-and-fixup.sh  update-timestamps-in-revision.sh  use-gnu-tar.sh  version-lookup.sh
static/: index.html
(+6030 files in other folders)
