cabal-version: 3.0
name: cardano-ledger-byron-test
version: 0.0.0.0
license: Apache-2.0
maintainer: operations@iohk.io
author: IOHK
homepage: https://github.com/intersectmbo/cardano-haskell-packages/
synopsis: Candidate package that prevents unauthorized release of cardano-ledger-byron-test
category: Control
build-type: Simple

source-repository head
  type: git
  location: https://github.com/intersectmbo/cardano-haskell-packages
  subdir: hackage-candidates/cardano-ledger-byron-test

library
  build-depends:
    base >=1 && <100,
  default-language: Haskell2010

  buildable:
    False
