cabal-version: 3.0

name:                libsystemd-journal
version:             1.4.6.0
synopsis:            Haskell bindings to libsystemd-journal
homepage:            https://github.com/ocharles/libsystemd-journal
license:             BSD-3-Clause
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ch.martin@gmail.com, ollie@ocharles.org.uk
copyright:           Oliver Charles (c) 2014
category:            Logging

description:
  Use this package to write to and read from journald. This is the
  logging system that is part of systemd, which you may be familiar
  with accessing via the command line using the journalctl command.

extra-source-files:
  Changelog.md

library
  exposed-modules:     Systemd.Journal
  build-depends:     , base ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19 || ^>= 4.20
                     , bytestring ^>= 0.11.1 || ^>= 0.12
                     , pipes ^>= 4.3.10
                     , pipes-safe ^>= 2.3.1
                     , text ^>= 1.2.5 || ^>= 2.0 || ^>= 2.1
                     , transformers ^>= 0.5.6 || ^>= 0.6
                     , unix-bytestring ^>= 0.3.6 || ^>= 0.4
                     , vector ^>= 0.12.3 || ^>= 0.13
                     , uuid ^>= 1.3.13
                     , unordered-containers ^>= 0.2.10
                     , hashable ^>= 1.3.2 || ^>= 1.4 || ^>= 1.5
                     , hsyslog ^>= 5.0
                     , uniplate ^>= 1.6.1
                     , semigroups ^>= 0.18.1 || ^>= 0.19 || ^>= 0.20
  hs-source-dirs:      src
  default-language:    GHC2021
  default-extensions:  OverloadedStrings
  pkgconfig-depends: libsystemd >= 209
